docs: аннотации Swagger для компетенций
- Добавление аннотации для метода получения списка компетенций;
- Добавление схемы модели компетенции;
- Добавление схем ответа от эндпоинта получения списка компетенций.
